# agentgate

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
Docs/: adapter-guide.md  architecture.md  baseline-lifecycle-runbook.md  consensus-and-mcp-proxy-plan.md  e10-reconnect-design.md  e11-configure-crd-design.md  e12-declared-chain-rules-design.md  e13-mabac-delegation-design.md  e7-architecture-options.md  e7-mcp-proxy-design.md  e7-real-upstream-plan.md  e9-evidence-ledger.md  fp-tuning-runbook.md  publishing-agentgate-ghcr.md  publishing-ghcr.md  review-remediation-plan.md
Docs/User Manuals/: Configuration.md  Installation.md  Troubleshooting.md
config/: README.md  otel-targets.yaml
deploy/: README.md  sidecar-manual.yaml
deploy/crd/: agentdriftpolicy.yaml  agenticarchitecture.yaml
deploy/helm/agentgate/: Chart.yaml  values.yaml
deploy/helm/agentgate/templates/: configmap.yaml  deployment.yaml  service.yaml
examples/e13-orchestration-as-code/: README.md  demo.py  grafana-dashboard.json  org.yaml  register-host-alias.sh  values-backend.yaml  values-live.yaml  values-llm.yaml  values-violation.yaml  with-tools.yaml
examples/e13-orchestration-as-code/data/: .gitkeep
src/agentgate/: __init__.py  cli.py  server.py
src/agentgate/codegen/: __init__.py  autogen.py  crewai.py  langgraph.py  runtime.py  tools.py  validate.py
src/agentgate/otel/: __init__.py  attributes.py  emit.py
tests/: __init__.py  test_agentgate.py  test_codegen.py  test_contract.py
