[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agentgate"
version = "0.1.0a0"
description = "Orchestration-as-code: declare an AgenticArchitecture, generate + run a multi-agent app"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Mustafa DAYIOĞLU" }]
dependencies = [
    "opentelemetry-api>=1.24.0",
    "opentelemetry-sdk>=1.24.0",
    "opentelemetry-exporter-otlp>=1.24.0",
]

[project.optional-dependencies]
# AgentGate HTTP /run service (FastAPI).
server = ["fastapi>=0.110.0", "uvicorn>=0.29.0"]
# E13 codegen-execute: only the GENERATED app needs LangGraph; codegen itself (generate_langgraph) is
# pure string-building. Opt-in to actually run a generated app.
codegen = ["langgraph>=0.2.0", "langchain>=0.3.0"]
# External MCP tool binding (spec.mcpServers) — FastMCP client.
mcp = ["fastmcp>=3.3.1"]
# bedrock LLM provider (the only non-httpx one — AWS SDK). openai/anthropic/gemini/ollama use httpx.
bedrock = ["boto3>=1.34.0"]
dev = ["pytest>=8.0.0", "pytest-cov>=5.0.0", "pytest-timeout>=2.3.0", "ruff>=0.4.0", "mypy>=1.10.0", "pyyaml>=6.0", "httpx>=0.27.0"]
all = ["agentgate[server,codegen,mcp,bedrock,dev]"]

[project.scripts]
agentgate = "agentgate.cli:main"                         # E13 generate/run
agentgate-server = "agentgate.server:run"      # AgentGate HTTP /run (needs .[server,codegen])

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
timeout = 60
timeout_method = "thread"

[tool.ruff]
line-length = 100
target-version = "py310"
